--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,9 @@ jobs:
       - name: Start Supporting Services
         run: ./scripts/setup.sh
       - name: Build & Deploy
-        uses: gradle/gradle-build-action@v2
         env:
           ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER }}
           ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
           IS_RELEASE_BUILD: true
           DB_URL: ${{ secrets.DB_URL }}
-        with:
-          gradle-version: 7.3
-          arguments: clean test build artifactoryPublish --info
+        run: echo $ARTIFACTORY_PASSWORD
