--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,6 @@ jobs:
           ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER }}
           ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
           DB_URL: ${{ secrets.DB_URL }}
-          IS_SNAPSHOT_BUILD: false
         with:
           gradle-version: 7.3
-          arguments: clean test build artifactoryPublish --info
+          arguments: clean test build artifactoryPublish --info -PIS_SNAPSHOT_BUILD=false
