--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,17 @@
 name: "CI"
 on: [pull_request]
 jobs:
-  Explore-GitHub-Actions:
+  Detekt:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "checkout"
+        uses: actions/checkout@v3
+      - name: "detekt"
+        uses: alaegin/Detekt-Action@v1.22.0-RC3
+        with:
+          github_token: ${{ secrets.github_token }}
+          detekt_config: .detekt.yml
+  Build:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
