--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,7 +4,7 @@ on:
     tags:
       - '*'
 jobs:
-  Build-And-Publish-A-Release:
+  CI-CD:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -25,6 +25,8 @@ jobs:
         uses: gradle/gradle-build-action@v2.4.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PACKAGE_STORE_USERNAME: ${{ secrets.PACKAGE_STORE_USERNAME }}
+          PACKAGE_STORE_TOKEN: ${{ secrets.PACKAGE_STORE_TOKEN }}
           DB_URL: ${{ secrets.DB_URL }}
         with:
           gradle-version: 8.2.1
